--- a/DLmodel/model_train.ipynb
+++ b/DLmodel/model_train.ipynb
@@ -2177,7 +2177,7 @@
    },
    "outputs": [],
    "source": [
-    "model.save(\"/\".join(os.getcwd().split(\"/\")[:-1] + [\"model/\"])+\"covidmodel.h5\")"
+    "model.save(\"/\".join(os.getcwd().split(\"/\")[:-1] + [\"DLmodel/\"])+\"trainedmodel.h5\")"
    ]
   }
  ],
