--- a/DLmodel/model_train.ipynb
+++ b/DLmodel/model_train.ipynb
@@ -27,7 +27,7 @@
     "from keras.metrics import categorical_crossentropy\n",
     "from keras.layers.convolutional import *\n",
     "from keras.applications import imagenet_utils\n",
-    "from keras.optimizers import adam\n",
+    "from keras.optimizers import adamax\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.model_selection import train_test_split\n",
